--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         Click the button and it'll count your clicks!<br>
     </p>
 
-    <p id="score">Highest Score: <span id="best"></span></p>
+    <p id="score">Highest Score: <span id="best">0</span></p>
 
     <div id="button" onclick="addCount()"><p id="count"></p></div>
 
